@@ -1,3 +1,9 @@
+2016-03-31 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCmain.c,
+	  doc/sdccman.lyx:
+	  Remove feature macros for signed / unsigned char.
+
 2016-03-31 Ben Shi <powerstudio1st AT 163 DOT com>
 
 	* support/regression/tests/gcc-torture-execute-pr19606.c
